Refactor: Refactor exception throw